kuberLearning/exerciseApp/kuber/orders-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: orders
  labels: 
     app: orders
spec:
  containers:
  - name: orders
    image: vadim38/orders:02
    ports:
    - containerPort: 5000
