kuberLearning/exerciseApp/kuber/order-kluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service-orders
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
