kuberLearning/exerciseApp/kuber/users-kluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service-users
spec:
  type: ClusterIP
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
