kuberLearning/exerciseApp/kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: clusterip-service-orders
            port:
              number: 80
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: clusterip-service-users
            port:
              number: 80
